fix(react-w2): update lectures

--- a/react/w2/lectures/1-why-react/index.html
+++ b/react/w2/lectures/1-why-react/index.html
@@ -8,7 +8,13 @@
   </head>
   <body>
     <h1>Home page</h1>
-    <nav><a href="./secondpage.html">Second Page</a></nav>
-    <!-- show how to create multiple elements shortcut -->
+    <nav>
+      <ul>
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./secondpage.html">Second Page</a></li>
+        <li><a href="./thirdpage.html">Third Page</a></li>
+        3 + 5
+      </ul>
+    </nav>
   </body>
 </html>
