--- a/react/w2/lectures/1-why-react/secondpage.html
+++ b/react/w2/lectures/1-why-react/secondpage.html
@@ -8,6 +8,12 @@
   </head>
   <body>
     <h1>Second Page</h1>
-    <nav><a href="./thirdpage.html">Third Page</a></nav>
+    <nav>
+      <ul>
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./secondpage.html">Second Page</a></li>
+        <li><a href="./thirdpage.html">Third Page</a></li>
+      </ul>
+    </nav>
   </body>
 </html>
