feat(react-w5): add task 1

--- a/react/w5/lectures/2-promises.html
+++ b/react/w5/lectures/2-promises.html
@@ -10,64 +10,70 @@
     <h1>Promises, Fetch API, & CRUD</h1>
     <script>
       let url = "https://jsonplaceholder.typicode.com/posts";
-      // let promise = fetch(url);
+      let promise = fetch(url);
       // console.log(promise);
       // setTimeout(() => {
       //   console.log(promise);
       // }, 1000);
 
       // GET - used to retrieve data
-      // fetch(url, {
-      //   method: "GET",
-      // })
-      //   .then((response) => response.json())
-      //   .then((data) => {
-      //     console.log("Success:", data);
-      //   })
-      //   .catch((error) => {
-      //     console.error("Error:", error);
-      //   });
+      fetch(url, {
+        method: "GET",
+      })
+        .then((response) => response.json())
+        .then((data) => {
+          console.log("GET Success:", data);
+        })
+        .catch((error) => {
+          console.error("Error:", error);
+        });
 
-      // POST - used for creating
-      // url = "https://jsonplaceholder.typicode.com/posts";
-      // fetch(url, {
-      //   method: "POST",
-      //   body: JSON.stringify({
-      //     title: "Test Title",
-      //     body: "Body",
-      //     userId: 1,
-      //   }),
-      //   headers: {
-      //     "Content-type": "application/json; charset=UTF-8",
-      //   },
-      // })
-      //   .then((response) => response.json())
-      //   .then((json) => console.log(json));
+      // POST - used for creating a new data entry
+      url = "https://jsonplaceholder.typicode.com/posts";
+      fetch(url, {
+        method: "POST",
+        body: JSON.stringify({
+          title: "Test Title",
+          body: "Body",
+          userId: 1,
+        }),
+        // body: JSON.stringify({
+        //   username: "Test Title",
+        //   password: "Body",
+        //   userId: 1,
+        // }),
+        headers: {
+          "Content-type": "application/json; charset=UTF-8",
+        },
+      })
+        .then((response) => response.json())
+        .then((json) => console.log("POST success", json));
 
-      // PUT - used for updating
-      // url = "https://jsonplaceholder.typicode.com/posts/1";
-      // fetch(url, {
-      //   method: "PUT",
-      //   body: JSON.stringify({
-      //     id: 1,
-      //     title: "foo",
-      //     body: "bar",
-      //     userId: 1,
-      //   }),
-      //   headers: {
-      //     "Content-type": "application/json; charset=UTF-8",
-      //   },
-      // })
-      //   .then((response) => response.json())
-      //   .then((json) => console.log(json));
+      // PUT - used for updating data
+      url = "https://jsonplaceholder.typicode.com/posts/1";
+      fetch(url, {
+        method: "PUT",
+        body: JSON.stringify({
+          id: 1,
+          title: "foo",
+          body: "bar",
+          userId: 1,
+        }),
+        headers: {
+          "Content-type": "application/json; charset=UTF-8",
+        },
+      })
+        .then((response) => response.json())
+        .then((json) => console.log("PUT", json));
+      // .catch(error) => console.log(error))
 
       // DELETE - delete one or more records
-      // url = "https://jsonplaceholder.typicode.com/posts/1";
-      // fetch(url, {
-      //   method: "DELETE",
-      // })
-      //   .then((response) => response.json())
-      //   .then((json) => console.log("status: 200 Delete successful"));
+      url = "https://jsonplaceholder.typicode.com/posts/1";
+      fetch(url, {
+        method: "DELETE",
+      })
+        .then((response) => response.json())
+        .then((json) => console.log("status: 200 Delete successful"));
     </script>
   </body>
 </html>
