--- a/react/w1/tasks/task2.html
+++ b/react/w1/tasks/task2.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Task 1</h1>
+    <h1>Task 2</h1>
     <script>
       class Student {
         constructor(name, email, community) {
@@ -23,17 +23,35 @@
           this.level = level;
           this.students = students;
         }
+
+        registerStudent(newStudent) {
+          const duplicates = this.students.filter(
+            (eachStudent) => eachStudent.email === newStudent.email
+          );
+
+          if (duplicates.length === 0) {
+            this.students.push(newStudent);
+            console.log(`Adding ${newStudent.email} to ${this.name} Bootcamp`);
+          } else {
+            console.log(`This student is already registered`);
+          }
+
+          return this.students;
+        }
       }
 
       const student1 = new Student("Meredith", "m@m", "React");
       const student2 = new Student("Ivo", "i@i", "React");
       const student3 = new Student("Kelley", "k@k", "React");
+      const student4 = new Student("Melissa", "k@k", "React");
 
       const bootcampObj = new Bootcamp("Melissa", "beginner", [
         student1,
         student2,
         student3,
       ]);
+
+      console.log(bootcampObj.registerStudent(student4));
     </script>
   </body>
 </html>
