--- a/react/w2/lectures/1-why-react/index.html
+++ b/react/w2/lectures/1-why-react/index.html
@@ -13,8 +13,9 @@
         <li><a href="./index.html">Home</a></li>
         <li><a href="./secondpage.html">Second Page</a></li>
         <li><a href="./thirdpage.html">Third Page</a></li>
-        3 + 5
+        <li><a href="./thirdpage.html">Fourth Page</a></li>
       </ul>
+      {3+5}
     </nav>
   </body>
 </html>
